Synchronize some nkx block updates (#320)